feat: transform project to enterprise-grade with Tiation & ChaseWhiteRabbit branding
🚀 Major Enterprise Transformation:

✨ Professional Branding & Identity:
- Integrated Tiation and ChaseWhiteRabbit branding throughout all documentation
- Added mission alignment with 'automation is compassion at scale'
- Professional contact information and organizational links

📚 Enterprise Documentation Suite:
- Added comprehensive README.md with professional branding
- Created CONTRIBUTING.md with detailed contribution guidelines
- Added CODE_OF_CONDUCT.md reflecting organizational values
- Created SECURITY.md with comprehensive security policy
- Added CHANGELOG.md following semantic versioning
- Created ENTERPRISE_IMPROVEMENTS.md transformation summary

🔧 Enhanced Development Configuration:
- Updated TypeScript to strict mode for enterprise-grade type safety
- Enhanced ESLint with security-focused rules and enterprise standards
- Added Prettier configuration for consistent code formatting
- Upgraded Vite config with security headers and optimizations

🛡️ Security & Compliance:
- Added comprehensive .env.example for secure configuration
- Created enterprise-grade .gitignore with security considerations
- Enhanced security headers in build configuration
- Added dependency scanning and vulnerability reporting

🚄 Enterprise CI/CD Pipeline:
- Created comprehensive GitHub Actions workflow
- Added multi-stage pipeline: Lint → Test → Build → Security → Deploy
- Integrated automated testing, security scanning, and accessibility checks
- Added performance monitoring with Lighthouse CI

📦 Enhanced Package Configuration:
- Updated package.json with complete Tiation branding and metadata
- Added comprehensive npm scripts for enterprise development
- Enhanced TypeScript configuration with strict mode
- Added enterprise-grade tooling and optimization

This transformation ensures the project meets enterprise standards while
maintaining alignment with Tiation's mission of creating technology tha

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,27 @@
+# The $19 Trillion Solution - Enterprise Grade .gitignore
+# Tiation & ChaseWhiteRabbit Initiative
+
+# ====================================
+# Dependencies
+# ====================================
+node_modules/
+vendor/
+
+# ====================================
+# Build Outputs
+# ====================================
+dist/
+dist-ssr/
+build/
+out/
+.next/
+.nuxt/
+.output/
+
+# ====================================
 # Logs
-logs
+# ====================================
+logs/
 *.log
 npm-debug.log*
 yarn-debug.log*
@@ -7,18 +29,127 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
+# ====================================
+# Runtime & Cache
+# ====================================
+.cache/
+.parcel-cache/
+.npm/
+.yarn/
+.pnpm/
+.eslintcache
+.stylelintcache
+.tsbuildinfo
+.turbo/
+
+# ====================================
+# Environment Variables
+# ====================================
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.env.staging.local
 *.local
 
-# Editor directories and files
+# ====================================
+# Testing
+# ====================================
+coverage/
+*.lcov
+.nyc_output/
+
+# ====================================
+# IDE & Editor Files
+# ====================================
 .vscode/*
 !.vscode/extensions.json
-.idea
-.DS_Store
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+.idea/
+*.swp
+*.swo
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
+
+# ====================================
+# Operating System Files
+# ====================================
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# ====================================
+# Security & Secrets
+# ====================================
+*.pem
+*.key
+*.cert
+*.crt
+*.p12
+*.pfx
+secrets.json
+.secrets/
+
+# ====================================
+# Documentation
+# ====================================
+/docs/build/
+/docs/dist/
+
+# ====================================
+# Development Tools
+# ====================================
+.storybook-static/
+.chromatic/
+
+# ====================================
+# Deployment
+# ====================================
+.vercel/
+.netlify/
+.firebase/
+
+# ====================================
+# Temporary Files
+# ====================================
+*.tmp
+*.temp
+.tmp/
+.temp/
+
+# ====================================
+# Package Manager Lock Files
+# Keep package-lock.json and yarn.lock for consistency
+# but ignore bun.lockb for now
+# ====================================
+# Uncomment if using specific package managers
+# package-lock.json
+# yarn.lock
+# bun.lockb
+
+# ====================================
+# Backup Files
+# ====================================
+*.bak
+*.backup
+*.old
+*.orig
+
+# ====================================
+# Miscellaneous
+# ====================================
+.vite/
+.svelte-kit/
+.sveltekit/
+.solid/
+.astro/
