--- a/package.json
+++ b/package.json
@@ -1,14 +1,54 @@
 {
-  "name": "abundant-aussie",
+  "name": "@tiation/19-trillion-solution",
   "private": true,
   "version": "1.0.0",
   "type": "module",
+  "description": "A comprehensive economic reform proposal demonstrating how Australia's $19 trillion in assets can eliminate debt and provide UBI",
+  "author": "Tiation <info@tiation.org>",
+  "contributors": [
+    "ChaseWhiteRabbit <info@chasewhiterabbit.org>"
+  ],
+  "homepage": "https://tiation.github.io/19-trillion-solution/",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/tiation/19-trillion-solution.git"
+  },
+  "bugs": {
+    "url": "https://github.com/tiation/19-trillion-solution/issues"
+  },
+  "license": "MIT",
+  "keywords": [
+    "economic-reform",
+    "australia",
+    "universal-basic-income",
+    "debt-elimination",
+    "policy-reform",
+    "tiation",
+    "chasewhiterabbit",
+    "cooperative-economics"
+  ],
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "build:dev": "vite build --mode development",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "build:analyze": "vite build --mode analyze",
+    "preview": "vite preview",
+    "lint": "eslint . --ext .ts,.tsx,.js,.jsx",
+    "lint:fix": "eslint . --ext .ts,.tsx,.js,.jsx --fix",
+    "format": "prettier --write \"src/**/*.{ts,tsx,js,jsx,json,css,md}\"",
+    "format:check": "prettier --check \"src/**/*.{ts,tsx,js,jsx,json,css,md}\"",
+    "type-check": "tsc --noEmit",
+    "test": "vitest",
+    "test:coverage": "vitest run --coverage",
+    "test:ui": "vitest --ui",
+    "validate": "npm run type-check && npm run lint && npm run format:check",
+    "clean": "rm -rf dist node_modules/.vite",
+    "prepare": "husky install",
+    "pre-commit": "lint-staged"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
